--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to my github page</title>
+    <link rel="stylesheet" href="/tailwind.css"/>
+</head>
+<body class="m-0">
+    <img class="h-screen fixed top-0 left-0" src="/279729.jpg"/>
+    <div class="h-screen w-screen justify-center text-center">
+        <div class="text-center">
+            Welcome!
+        </div>
+    </div>
+</body>
+</html>
