--- a/index.html
+++ b/index.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to my github page</title>
-    <link rel="stylesheet" href="/tailwind.css"/>
-</head>
-<body class="m-0">
-    <img class="h-screen fixed top-0 left-0" src="/279729.jpg"/>
-    <div class="h-screen w-screen justify-center text-center">
-        <div class="text-center">
-            Welcome!
-        </div>
+    <link rel="stylesheet" href="tailwind.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        .low-poly{
+            background-image: url("low-poly-grid-haikei.svg");
+            aspect-ratio: 3/2;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
+        .layered-peaks{
+            background-image: url("layered-peaks-haikei.svg");
+            aspect-ratio: 9/1;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
+        hr{
+            position: relative;
+            left:12.5%
+        }
+    </style>
+  </head>
+  <body class="bg-gray-800">
+    <div class="z-0 w-screen low-poly">
     </div>
-</body>
+    <div class="absolute top-0 left-0">
+      <div class="flex h-screen w-screen z-20">
+        <div class="text-center text-gray-300 m-auto z-auto">
+          <h1>Welcome!</h1>
+          <p>
+            I am Prabhakar Dev<br />
+            I am a Fresher in btech CCE at Manipal Institute of technology<br />
+          </p>
+        </div>
+      </div>
+      <div class="w-screen layered-peaks mb-0"></div>
+      <div class="min-h-screen w-screen bg-yellow-800">
+        <h1 class="text-center text-4xl mb-5">Skills</h1>
+        <hr class="w-3/4 h-1 bg-black border-0 justify-center"/>
+        <div class="w-screen flex mt-5">
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-blue-800">
+            <div class="text-7xl"><i class="fab fa-python"></i></div>
+            <h2 class="font-bold text-2xl">Python</h2>
+          </div>
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+            <div class="text-7xl"><i class="fab fa-rust"></i></div>
+            <h2 class="font-bold text-2xl">Rust</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
