increased text size of introduction messages

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="absolute top-0 left-0">
       <div class="flex h-screen w-screen z-20">
         <div class="text-center text-gray-300 m-auto z-auto">
-          <h1>Welcome!</h1>
-          <p>
+          <h1 class="text-8xl">Welcome!</h1>
+          <p class="text-xl mt-20">
             I am Prabhakar Dev<br />
             I am a Fresher in btech CCE at Manipal Institute of technology<br />
           </p>
