--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
   </head>
   <body class="bg-gray-800">
-    <div class="z-0 w-screen low-poly">
+    <div class="z-0 md:w-screen sm:w-xf low-poly">
     </div>
     <div class="absolute top-0 left-0">
       <div class="flex h-screen w-screen z-20">
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="w-screen layered-peaks mb-0"></div>
-      <div class="min-h-screen w-screen bg-yellow-800">
+      <div class="min-h-screen w-screen bg-green-800">
         <h1 class="text-center text-4xl mb-5">Skills</h1>
         <hr class="w-3/4 h-1 bg-black border-0 justify-center"/>
         <div class="w-screen flex mt-5">
