fixed background issue

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         }
     </style>
   </head>
-  <body class="bg-gray-800">
-    <div class="z-0 md:w-screen sm:w-xf low-poly">
+  <body class="bg-gray-800 overflow-x-hidden">
+    <div class="z-0 md:w-screen sm:h-xf low-poly">
     </div>
     <div class="absolute top-0 left-0">
       <div class="flex h-screen w-screen z-20">
