--- a/index.html
+++ b/index.html
@@ -54,6 +54,30 @@
             <div class="text-7xl"><i class="fab fa-rust"></i></div>
             <h2 class="font-bold text-2xl">Rust</h2>
           </div>
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+            <div class="text-7xl"><i class="fa-solid fa-c"></i></div>
+            <h2 class="font-bold text-2xl">C/C++</h2>
+          </div>
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+            <div class="text-7xl"><i class="fab fa-js-square"></i></div>
+            <h2 class="font-bold text-2xl">JavaScript</h2>
+          </div>
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+            <div class="text-7xl"><i class="fab fa-java"></i></div>
+            <h2 class="font-bold text-2xl">Java</h2>
+          </div>
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+            <div class="text-7xl"><i class="fab fa-css3-alt"></i></div>
+            <h2 class="font-bold text-2xl">CSS</h2>
+          </div>
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+            <div class="text-7xl"><i class="fab fa-html5"></i></div>
+            <h2 class="font-bold text-2xl">HTML</h2>
+          </div>
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+            <div class="text-7xl"><i class="fab fa-node-js"></i></div>
+            <h2 class="font-bold text-2xl">NodeJS</h2>
+          </div>
         </div>
       </div>
     </div>
