--- a/index.html
+++ b/index.html
@@ -78,6 +78,22 @@
             <div class="text-7xl"><i class="fab fa-node-js"></i></div>
             <h2 class="font-bold text-2xl">NodeJS</h2>
           </div>
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+            <div class="text-7xl"><i class="fab fa-golang"></i></div>
+            <h2 class="font-bold text-2xl">Golang</h2>
+          </div>
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+            <div class="text-7xl"><i class="fab fa-vuejs"></i></div>
+            <h2 class="font-bold text-2xl">Vuejs</h2>
+          </div>
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+            <div class="text-7xl"><i class="fab fa-react"></i></div>
+            <h2 class="font-bold text-2xl">React</h2>
+          </div>
+          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+            <div class="text-7xl"><i class="fab fa-android"></i></div>
+            <h2 class="font-bold text-2xl">Android</h2>
+          </div>
         </div>
       </div>
     </div>
