--- a/index.html
+++ b/index.html
@@ -42,58 +42,58 @@
         </div>
       </div>
       <div class="w-screen layered-peaks mb-0"></div>
-      <div class="min-h-screen w-screen bg-green-800">
+      <div class="min-h-screen w-screen bg-black text-gray-700">
         <h1 class="text-center text-4xl mb-5">Skills</h1>
-        <hr class="w-3/4 h-1 bg-black border-0 justify-center"/>
-        <div class="w-screen flex mt-5">
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-blue-800">
+        <hr class="w-3/4 h-1 bg-gray-700 border-0 justify-center"/>
+        <div class="w-screen flex flex-wrap mt-5">
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background: linear-gradient(0deg, rgba(255,209,65,1) 50%, rgba(48,105,152,1) 50%);">
             <div class="text-7xl"><i class="fab fa-python"></i></div>
             <h2 class="font-bold text-2xl">Python</h2>
           </div>
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background-color: #F74C00;">
             <div class="text-7xl"><i class="fab fa-rust"></i></div>
             <h2 class="font-bold text-2xl">Rust</h2>
           </div>
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background-color: #3949AA;">
             <div class="text-7xl"><i class="fa-solid fa-c"></i></div>
             <h2 class="font-bold text-2xl">C/C++</h2>
-          </div>
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+          </div><br/>
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background-color: #F7DF1E;">
             <div class="text-7xl"><i class="fab fa-js-square"></i></div>
             <h2 class="font-bold text-2xl">JavaScript</h2>
           </div>
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background: linear-gradient(0deg, rgba(82,131,162,1) 50%, rgba(248,153,23,1) 50%);">
             <div class="text-7xl"><i class="fab fa-java"></i></div>
             <h2 class="font-bold text-2xl">Java</h2>
           </div>
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background-color: #2965F1;">
             <div class="text-7xl"><i class="fab fa-css3-alt"></i></div>
             <h2 class="font-bold text-2xl">CSS</h2>
-          </div>
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+          </div><br/>
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background-color: #F16524;">
             <div class="text-7xl"><i class="fab fa-html5"></i></div>
             <h2 class="font-bold text-2xl">HTML</h2>
           </div>
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background-color: #679E63;">
             <div class="text-7xl"><i class="fab fa-node-js"></i></div>
             <h2 class="font-bold text-2xl">NodeJS</h2>
           </div>
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background-color: #00AED8;">
             <div class="text-7xl"><i class="fab fa-golang"></i></div>
             <h2 class="font-bold text-2xl">Golang</h2>
-          </div>
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+          </div><br/>
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background: linear-gradient(180deg, rgba(49,71,94,1) 20%, rgba(63,185,132,1) 20%);">
             <div class="text-7xl"><i class="fab fa-vuejs"></i></div>
             <h2 class="font-bold text-2xl">Vuejs</h2>
           </div>
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background-color: #61DAFB;">
             <div class="text-7xl"><i class="fab fa-react"></i></div>
             <h2 class="font-bold text-2xl">React</h2>
           </div>
-          <div class="h-1/3 w-1/3 border-2 rounded-md text-center justify-center p-2 m-2 bg-orange-800">
+          <div class="h-1/3 w-30p border-2 rounded-md text-center justify-center p-2 m-2" style="background-color: #3DDB85;">
             <div class="text-7xl"><i class="fab fa-android"></i></div>
             <h2 class="font-bold text-2xl">Android</h2>
-          </div>
+          </div><br/>
         </div>
       </div>
     </div>
